feat: higlight card upload & storage (#39)
* feat: higlight card upload & storage

* feat: added parse int pipe

* parseIntPipe

* type fixes

* feat: check if highlight needs regeneration

* lint b6abefaa364c5c7c3f97e52990808ad6687e989c

--- a/coverage.html
+++ b/coverage.html
@@ -160,7 +160,19 @@
             <td>S3FileStorageService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+                <span class="coverage-count">(0/9)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/HighlightCardController.html">src/social-card/highlight-card/highlight-card.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>HighlightCardController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -172,7 +184,7 @@
             <td>HighlightCardService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -184,7 +196,7 @@
             <td>HighlightCardData</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+                <span class="coverage-count">(0/9)</span>
             </td>
         </tr>
         <tr class="low">
@@ -317,18 +329,6 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/7)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/RequiresUpdateMeta.html">src/social-card/user-card/user-card.service.ts</a>
-            </td>
-            <td>interface</td>
-            <td>RequiresUpdateMeta</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
