--- a/injectables/S3FileStorageService.html
+++ b/injectables/S3FileStorageService.html
@@ -112,6 +112,10 @@
                             </li>
                             <li>
                                     <span class="modifier">Async</span>
+                                <a href="#getFileMeta" >getFileMeta</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#uploadFile" >uploadFile</a>
                             </li>
                         </ul>
@@ -326,6 +330,77 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
+                    <a name="getFileMeta"></a>
+                    <span class="name">
+                        <span class="modifier">Async</span>
+                        <span ><b>getFileMeta</b></span>
+                        <a href="#getFileMeta"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>getFileMeta(hash: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="74"
+                            class="link-to-prism">src/s3-file-storage/s3-file-storage.service.ts:74</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>hash</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>    <code>Promise&lt;Record | null&gt;</code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
                     <a name="uploadFile"></a>
                     <span class="name">
                         <span class="modifier">Async</span>
@@ -344,8 +419,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="74"
-                            class="link-to-prism">src/s3-file-storage/s3-file-storage.service.ts:74</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="95"
+                            class="link-to-prism">src/s3-file-storage/s3-file-storage.service.ts:95</a></div>
                 </td>
             </tr>
 
@@ -583,6 +658,27 @@ export class S3FileStorageService {
       );
 
       return response.LastModified ?? null;
+    } catch (error) {
+      if (error instanceof Error) {
+        if (error.name &#x3D;&#x3D;&#x3D; &quot;NotFound&quot;) {
+          return null;
+        }
+      }
+
+      throw error;
+    }
+  }
+
+  async getFileMeta (hash: string): Promise&lt;Record&lt;string, string&gt; | null&gt; {
+    try {
+      const response &#x3D; await this.s3Client.send(
+        new HeadObjectCommand({
+          Bucket: this.config.bucketName,
+          Key: hash,
+        }),
+      );
+
+      return response.Metadata ?? null;
     } catch (error) {
       if (error instanceof Error) {
         if (error.name &#x3D;&#x3D;&#x3D; &quot;NotFound&quot;) {
