--- a/injectables/UserCardService.html
+++ b/injectables/UserCardService.html
@@ -134,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/social-card/user-card/user-card.service.ts:36</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/social-card/user-card/user-card.service.ts:30</a></div>
                             </td>
                         </tr>
 
@@ -223,8 +223,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="113"
-                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:113</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="107"
+                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:107</a></div>
                 </td>
             </tr>
 
@@ -262,7 +262,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="../interfaces/RequiresUpdateMeta.html" target="_self" >Promise&lt;RequiresUpdateMeta&gt;</a></code>
+                        <b>Returns : </b>    <code>Promise&lt;RequiresUpdateMeta&gt;</code>
 
                     </div>
                     <div class="io-description">
@@ -294,8 +294,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="82"
-                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:82</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="76"
+                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:76</a></div>
                 </td>
             </tr>
 
@@ -377,8 +377,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="139"
-                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:139</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="133"
+                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:133</a></div>
                 </td>
             </tr>
 
@@ -449,8 +449,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="44"
-                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:44</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="38"
+                            class="link-to-prism">src/social-card/user-card/user-card.service.ts:38</a></div>
                 </td>
             </tr>
 
@@ -524,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/social-card/user-card/user-card.service.ts:36</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/social-card/user-card/user-card.service.ts:30</a></div>
                         </td>
                     </tr>
 
@@ -550,13 +550,7 @@ import userLangs from &quot;../templates/shared/user-langs&quot;;
 import userProfileRepos from &quot;../templates/shared/user-repos&quot;;
 import userProfileCardTemplate from &quot;../templates/user-profile-card.template&quot;;
 import tailwindConfig from &quot;../templates/tailwind.config&quot;;
-
-interface RequiresUpdateMeta {
-  fileUrl: string,
-  hasFile: boolean;
-  needsUpdate: boolean;
-  lastModified: Date | null,
-}
+import RequiresUpdateMeta from &quot;../../../typings/RequiresUpdateMeta&quot;;
 
 interface UserCardData {
   id: User[&quot;databaseId&quot;],
