feat: highlights getting repo name & languages from pr's repo (#41)
* feat: github pr data insertion

* requested changes

* nit: remove unneeded typing

* lint

* type refractor

* lint 1555a25a114b0d812c058d1a9728706a63965b44

--- a/coverage.html
+++ b/coverage.html
@@ -112,7 +112,19 @@
             <td>GithubService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#getRepo">src/github/gql/get-repo.ts</a>
+            </td>
+            <td>variable</td>
+            <td>getRepo</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
         <tr class="low">
@@ -196,7 +208,7 @@
             <td>HighlightCardData</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
+                <span class="coverage-count">(0/10)</span>
             </td>
         </tr>
         <tr class="low">
