--- a/injectables/GithubService.html
+++ b/injectables/GithubService.html
@@ -101,6 +101,10 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Async</span>
+                                <a href="#getRepo" >getRepo</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#getUser" >getUser</a>
                             </li>
                             <li>
@@ -130,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/github/github.service.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/github/github.service.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -177,6 +181,89 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
+                    <a name="getRepo"></a>
+                    <span class="name">
+                        <span class="modifier">Async</span>
+                        <span ><b>getRepo</b></span>
+                        <a href="#getRepo"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>getRepo(owner: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, repo: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="33"
+                            class="link-to-prism">src/github/github.service.ts:33</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>owner</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>repo</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>    <code>unknown</code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
                     <a name="getUser"></a>
                     <span class="name">
                         <span class="modifier">Async</span>
@@ -195,8 +282,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/github/github.service.ts:21</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="22"
+                            class="link-to-prism">src/github/github.service.ts:22</a></div>
                 </td>
             </tr>
 
@@ -266,8 +353,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="32"
-                            class="link-to-prism">src/github/github.service.ts:32</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="41"
+                            class="link-to-prism">src/github/github.service.ts:41</a></div>
                 </td>
             </tr>
 
@@ -304,7 +391,7 @@
             </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/github/github.service.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/github/github.service.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -331,7 +418,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/github/github.service.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/github/github.service.ts:12</a></div>
                         </td>
                     </tr>
 
@@ -347,9 +434,10 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Inject, Injectable, Logger } from &quot;@nestjs/common&quot;;
 import { ConfigType } from &quot;@nestjs/config&quot;;
 import { graphql } from &quot;@octokit/graphql&quot;;
-import { RateLimit, User } from &quot;@octokit/graphql-schema&quot;;
+import { RateLimit, Repository, User } from &quot;@octokit/graphql-schema&quot;;
 
 import GithubConfig from &quot;../config/github.config&quot;;
+import getRepo from &quot;./gql/get-repo&quot;;
 import getUser from &quot;./gql/get-user&quot;;
 
 @Injectable()
@@ -373,6 +461,14 @@ export class GithubService {
     const { user } &#x3D; await this.graphqlWithAuth&lt;{ user: User }&gt;(query, variables);
 
     return user;
+  }
+
+  async getRepo (owner: string, repo: string) {
+    const { query, variables } &#x3D; getRepo(owner, repo);
+
+    const { repository } &#x3D; await this.graphqlWithAuth&lt;{ repository: Repository }&gt;(query, variables);
+
+    return repository;
   }
 
   async rateLimit () {
