--- a/injectables/HighlightCardService.html
+++ b/injectables/HighlightCardService.html
@@ -134,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:31</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:32</a></div>
                             </td>
                         </tr>
 
@@ -223,8 +223,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="117"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:117</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="106"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:106</a></div>
                 </td>
             </tr>
 
@@ -294,8 +294,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="86"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:86</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="75"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:75</a></div>
                 </td>
             </tr>
 
@@ -377,8 +377,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="147"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:147</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="136"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:136</a></div>
                 </td>
             </tr>
 
@@ -449,8 +449,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="40"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:40</a></div>
                 </td>
             </tr>
 
@@ -524,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:31</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -557,12 +557,13 @@ interface HighlightCardData {
   body: string,
   reactions: number,
   avatarUrl: string,
-  repos: Repository[],
+  repo: Repository,
   langTotal: number,
   langs: (Language &amp; {
     size: number,
   })[],
-  updated_at: Date
+  updated_at: Date,
+  url: string,
 }
 
 @Injectable()
@@ -576,48 +577,36 @@ export class HighlightCardService {
   ) {}
 
   private async getHighlightData (highlightId: number): Promise&lt;HighlightCardData&gt; {
-    const langs: Record&lt;string, Language &amp; {
-      size: number,
-    }&gt; &#x3D; {};
-    const today &#x3D; (new Date);
-    const today30daysAgo &#x3D; new Date((new Date).setDate(today.getDate() - 30));
-
     const highlightReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;));
-    const { login, title, highlight: body, updated_at } &#x3D; highlightReq.data;
+    const { login, title, highlight: body, updated_at, url } &#x3D; highlightReq.data;
 
     const reactionsReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbReaction[]&gt;(&#x60;https://api.opensauced.pizza/v1/highlights/${highlightId}/reactions&#x60;));
     const reactions &#x3D; reactionsReq.data.reduce&lt;number&gt;( (acc, curr) &#x3D;&gt; acc + Number(curr.reaction_count), 0);
 
+    const [owner, repoName] &#x3D; url.replace(&quot;https://github.com/&quot;, &quot;&quot;).split(&quot;/&quot;);
+
     const user &#x3D; await this.githubService.getUser(login);
-    const langRepos &#x3D; user.repositories.nodes?.filter(repo &#x3D;&gt; new Date(String(repo?.pushedAt)) &gt; today30daysAgo) as Repository[];
-    let langTotal &#x3D; 0;
+    const repo &#x3D; await this.githubService.getRepo(owner, repoName);
 
-    langRepos.forEach(repo &#x3D;&gt; {
-      repo.languages?.edges?.forEach(edge &#x3D;&gt; {
-        if (edge?.node.id) {
-          langTotal +&#x3D; edge.size;
-
-          if (!Object.keys(langs).includes(edge.node.id)) {
-            langs[edge.node.id] &#x3D; {
-              ...edge.node,
-              size: edge.size,
-            };
-          } else {
-            langs[edge.node.id].size +&#x3D; edge.size;
-          }
-        }
-      });
-    });
+    const langList &#x3D; repo.languages?.edges?.flatMap(edge &#x3D;&gt; {
+      if (edge) {
+        return {
+          ...edge.node,
+          size: edge.size,
+        };
+      }
+    }) as (Language &amp; { size: number })[];
 
     return {
       title,
       body,
       reactions,
       avatarUrl: &#x60;${String(user.avatarUrl)}&amp;size&#x3D;150&#x60;,
-      langs: Array.from(Object.values(langs)).sort((a, b) &#x3D;&gt; b.size - a.size),
-      langTotal,
-      repos: user.topRepositories.nodes?.filter(repo &#x3D;&gt; !repo?.isPrivate &amp;&amp; repo?.owner.login !&#x3D;&#x3D; login) as Repository[],
+      langs: langList,
+      langTotal: repo.languages?.totalSize ?? 0,
+      repo,
       updated_at: new Date(updated_at),
+      url,
     };
   }
 
@@ -626,9 +615,9 @@ export class HighlightCardService {
     const { html } &#x3D; await import(&quot;satori-html&quot;);
     const satori &#x3D; (await import(&quot;satori&quot;)).default;
 
-    const { title, body, reactions, avatarUrl, repos, langs, langTotal } &#x3D; highlightData ? highlightData : await this.getHighlightData(highlightId);
+    const { title, body, reactions, avatarUrl, repo, langs, langTotal } &#x3D; highlightData ? highlightData : await this.getHighlightData(highlightId);
 
-    const template &#x3D; html(highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos(repos, 2), reactions));
+    const template &#x3D; html(highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos([repo], 2), reactions));
 
     const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
 
