--- a/interfaces/HighlightCardData.html
+++ b/interfaces/HighlightCardData.html
@@ -114,9 +114,9 @@
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#repos" 
+                                        <a href="#repo" 
 >
-                                            repos
+                                            repo
                                         </a>
                                 </li>
                                 <li>
@@ -129,6 +129,12 @@
                                         <a href="#updated_at" 
 >
                                             updated_at
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="#url" 
+>
+                                            url
                                         </a>
                                 </li>
                             </ul>
@@ -311,9 +317,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="repos"></a>
-                                        <span class="name "><b>repos</b>
-                                            <a href="#repos">
+                                        <a name="repo"></a>
+                                        <span class="name "><b>repo</b>
+                                            <a href="#repo">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -321,7 +327,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>repos:     <code>Repository[]</code>
+                                        <code>repo:     <code>Repository</code>
 </code>
                                     </td>
                                 </tr>
@@ -329,7 +335,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>Repository[]</code>
+                                            <i>Type : </i>    <code>Repository</code>
 
                                         </td>
                                     </tr>
@@ -406,6 +412,39 @@
 
                         </tbody>
                     </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="url"></a>
+                                        <span class="name "><b>url</b>
+                                            <a href="#url">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>url:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
             </section>
     </div>
 
@@ -431,12 +470,13 @@ interface HighlightCardData {
   body: string,
   reactions: number,
   avatarUrl: string,
-  repos: Repository[],
+  repo: Repository,
   langTotal: number,
   langs: (Language &amp; {
     size: number,
   })[],
-  updated_at: Date
+  updated_at: Date,
+  url: string,
 }
 
 @Injectable()
@@ -450,48 +490,36 @@ export class HighlightCardService {
   ) {}
 
   private async getHighlightData (highlightId: number): Promise&lt;HighlightCardData&gt; {
-    const langs: Record&lt;string, Language &amp; {
-      size: number,
-    }&gt; &#x3D; {};
-    const today &#x3D; (new Date);
-    const today30daysAgo &#x3D; new Date((new Date).setDate(today.getDate() - 30));
-
     const highlightReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;));
-    const { login, title, highlight: body, updated_at } &#x3D; highlightReq.data;
+    const { login, title, highlight: body, updated_at, url } &#x3D; highlightReq.data;
 
     const reactionsReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbReaction[]&gt;(&#x60;https://api.opensauced.pizza/v1/highlights/${highlightId}/reactions&#x60;));
     const reactions &#x3D; reactionsReq.data.reduce&lt;number&gt;( (acc, curr) &#x3D;&gt; acc + Number(curr.reaction_count), 0);
 
+    const [owner, repoName] &#x3D; url.replace(&quot;https://github.com/&quot;, &quot;&quot;).split(&quot;/&quot;);
+
     const user &#x3D; await this.githubService.getUser(login);
-    const langRepos &#x3D; user.repositories.nodes?.filter(repo &#x3D;&gt; new Date(String(repo?.pushedAt)) &gt; today30daysAgo) as Repository[];
-    let langTotal &#x3D; 0;
+    const repo &#x3D; await this.githubService.getRepo(owner, repoName);
 
-    langRepos.forEach(repo &#x3D;&gt; {
-      repo.languages?.edges?.forEach(edge &#x3D;&gt; {
-        if (edge?.node.id) {
-          langTotal +&#x3D; edge.size;
-
-          if (!Object.keys(langs).includes(edge.node.id)) {
-            langs[edge.node.id] &#x3D; {
-              ...edge.node,
-              size: edge.size,
-            };
-          } else {
-            langs[edge.node.id].size +&#x3D; edge.size;
-          }
-        }
-      });
-    });
+    const langList &#x3D; repo.languages?.edges?.flatMap(edge &#x3D;&gt; {
+      if (edge) {
+        return {
+          ...edge.node,
+          size: edge.size,
+        };
+      }
+    }) as (Language &amp; { size: number })[];
 
     return {
       title,
       body,
       reactions,
       avatarUrl: &#x60;${String(user.avatarUrl)}&amp;size&#x3D;150&#x60;,
-      langs: Array.from(Object.values(langs)).sort((a, b) &#x3D;&gt; b.size - a.size),
-      langTotal,
-      repos: user.topRepositories.nodes?.filter(repo &#x3D;&gt; !repo?.isPrivate &amp;&amp; repo?.owner.login !&#x3D;&#x3D; login) as Repository[],
+      langs: langList,
+      langTotal: repo.languages?.totalSize ?? 0,
+      repo,
       updated_at: new Date(updated_at),
+      url,
     };
   }
 
@@ -500,9 +528,9 @@ export class HighlightCardService {
     const { html } &#x3D; await import(&quot;satori-html&quot;);
     const satori &#x3D; (await import(&quot;satori&quot;)).default;
 
-    const { title, body, reactions, avatarUrl, repos, langs, langTotal } &#x3D; highlightData ? highlightData : await this.getHighlightData(highlightId);
+    const { title, body, reactions, avatarUrl, repo, langs, langTotal } &#x3D; highlightData ? highlightData : await this.getHighlightData(highlightId);
 
-    const template &#x3D; html(highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos(repos, 2), reactions));
+    const template &#x3D; html(highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos([repo], 2), reactions));
 
     const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
 
