feat: UI adjustments (#42)
* feat: remove lang gaps

* feat: decrease user repos limit

* feat: use user's github login name acbe81a39303d7495fd4bebd51306bd3fe8d9d18

--- a/changelog.html
+++ b/changelog.html
@@ -37,13 +37,18 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
-<h2 id="210-beta4-2023-05-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0-beta.3...v2.1.0-beta.4">2.1.0-beta.4</a> (2023-05-04)</h2>
+<h2 id="210-beta5-2023-05-05"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0-beta.4...v2.1.0-beta.5">2.1.0-beta.5</a> (2023-05-05)</h2>
 <h3 id="🍕-features">🍕 Features</h3>
+<ul>
+<li>highlights getting repo name &amp; languages from pr&#39;s repo (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/41">#41</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/1555a25a114b0d812c058d1a9728706a63965b44">1555a25</a>)</li>
+</ul>
+<h2 id="210-beta4-2023-05-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0-beta.3...v2.1.0-beta.4">2.1.0-beta.4</a> (2023-05-04)</h2>
+<h3 id="🍕-features-1">🍕 Features</h3>
 <ul>
 <li>higlight card upload &amp; storage (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/39">#39</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/b6abefaa364c5c7c3f97e52990808ad6687e989c">b6abefa</a>)</li>
 </ul>
 <h2 id="210-beta3-2023-05-02"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0-beta.2...v2.1.0-beta.3">2.1.0-beta.3</a> (2023-05-02)</h2>
-<h3 id="🍕-features-1">🍕 Features</h3>
+<h3 id="🍕-features-2">🍕 Features</h3>
 <ul>
 <li>Highlight Cards UI Generation (frontend-only) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/36">#36</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/138a847bad92eb1f35fafa467720de01646f31cc">138a847</a>)</li>
 </ul>
@@ -53,7 +58,7 @@
 <li>Overflowing language bar fix (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/38">#38</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3dc1a0add116c1124af6a993e9e843015f3c0d25">3dc1a0a</a>)</li>
 </ul>
 <h2 id="210-beta1-2023-04-26"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.1...v2.1.0-beta.1">2.1.0-beta.1</a> (2023-04-26)</h2>
-<h3 id="🍕-features-2">🍕 Features</h3>
+<h3 id="🍕-features-3">🍕 Features</h3>
 <ul>
 <li>adding utilities for cards local generation &amp; testing (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/34">#34</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c5a5fecd3689b11fd3325c7f0fd3228bd368e0f5">c5a5fec</a>)</li>
 </ul>
@@ -90,7 +95,7 @@
 <ul>
 <li>update live environments lins and document local development (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/08cead19189d14ff4d01a23584400c284818a091">08cead1</a>)</li>
 </ul>
-<h3 id="🍕-features-3">🍕 Features</h3>
+<h3 id="🍕-features-4">🍕 Features</h3>
 <ul>
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 <li>add custom cdn endpoint configuration for s3 bucket on digital ocean (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/077e473ba9ec01d88d383f202427f06398047652">077e473</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/18">#18</a></li>
@@ -140,7 +145,7 @@
 <li>correct app spec GET automatic rewrites of HEAD (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3047cec62aff770abb4fe97d736c18790e406fa8">3047cec</a>)</li>
 </ul>
 <h2 id="120-beta9-2023-04-10"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.8...v1.2.0-beta.9">1.2.0-beta.9</a> (2023-04-10)</h2>
-<h3 id="🍕-features-4">🍕 Features</h3>
+<h3 id="🍕-features-5">🍕 Features</h3>
 <ul>
 <li>optimize image loading and return errors (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/7c6f1995bb2922bfd9cd9e26230afd079e2e6342">7c6f199</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/17">#17</a></li>
 </ul>
@@ -149,7 +154,7 @@
 <li>update dependencies and ts5 (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/715e349e1c398a37d35553e9a907742452b67601">715e349</a>)</li>
 </ul>
 <h2 id="120-beta8-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.7...v1.2.0-beta.8">1.2.0-beta.8</a> (2023-04-09)</h2>
-<h3 id="🍕-features-5">🍕 Features</h3>
+<h3 id="🍕-features-6">🍕 Features</h3>
 <ul>
 <li>implement no-content verification strategy (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6efe0e67bb61dc2d0d7aab74744019441b6e777e">6efe0e6</a>)</li>
 </ul>
@@ -180,12 +185,12 @@
 <li>correct yoga layout double styling, remove repo icon extrenaous classes (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d84015bf1264397d9ac6ff18b7c5344f237708ff">d84015b</a>)</li>
 </ul>
 <h2 id="120-beta4-2023-04-08"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.3...v1.2.0-beta.4">1.2.0-beta.4</a> (2023-04-08)</h2>
-<h3 id="🍕-features-6">🍕 Features</h3>
+<h3 id="🍕-features-7">🍕 Features</h3>
 <ul>
 <li>add custom cdn endpoint configuration for s3 bucket on digital ocean (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/077e473ba9ec01d88d383f202427f06398047652">077e473</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/18">#18</a></li>
 </ul>
 <h2 id="120-beta3-2023-04-05"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.2...v1.2.0-beta.3">1.2.0-beta.3</a> (2023-04-05)</h2>
-<h3 id="🍕-features-7">🍕 Features</h3>
+<h3 id="🍕-features-8">🍕 Features</h3>
 <ul>
 <li>implement digital ocean spaces s3 client storage and cache images 3 days (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/792992e8ad8849a8e1c10178b84e0caa4d023b1b">792992e</a>)</li>
 </ul>
@@ -195,7 +200,7 @@
 <li>correct live release url in github actions deployment (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4a434e675198be1ee3ec0000a85a02dccf1b080e">4a434e6</a>)</li>
 </ul>
 <h2 id="120-beta1-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.2...v1.2.0-beta.1">1.2.0-beta.1</a> (2023-04-04)</h2>
-<h3 id="🍕-features-8">🍕 Features</h3>
+<h3 id="🍕-features-9">🍕 Features</h3>
 <ul>
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 </ul>
@@ -218,7 +223,7 @@
 <ul>
 <li>remove extraneous colors package (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4c7d29aa9ad9a7fe79c30fb79ed3e57b971fa9a5">4c7d29a</a>)</li>
 </ul>
-<h3 id="🍕-features-9">🍕 Features</h3>
+<h3 id="🍕-features-10">🍕 Features</h3>
 <ul>
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
@@ -262,7 +267,7 @@
 <li>move to nextjs backend architecture static component functions and boilerplate (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d4f854d4d5cee998e6495753a44dc006547a32bd">d4f854d</a>)</li>
 <li>rewrite code and correct buffers (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c12099a219b529250ba6fb8527911c4972d344d4">c12099a</a>)</li>
 </ul>
-<h3 id="🍕-features-10">🍕 Features</h3>
+<h3 id="🍕-features-11">🍕 Features</h3>
 <ul>
 <li>add development tooling and backend configuration (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/f1f5947c4b97829f8e17e56bd4c8c4aab5bd4c63">f1f5947</a>)</li>
 <li>add dynamic image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5797c5447edbe4dd1923fecf3af72c169cc7b781">5797c54</a>)</li>
