refactor: correct lint and merge issues cba7521c71f7d5ef19c2be49f1b2cd6171272dc8

--- a/coverage.html
+++ b/coverage.html
@@ -106,6 +106,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/DbReaction.html">src/github/entities/db-reaction.entity.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DbReaction</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/DbUserHighlight.html">src/github/entities/db-user-highlight.entity.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DbUserHighlight</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/11)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./injectables/GithubService.html">src/github/github.service.ts</a>
             </td>
             <td>injectable</td>
@@ -341,6 +365,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/RequiresUpdateMeta.html">src/social-card/user-card/user-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>RequiresUpdateMeta</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
