--- a/injectables/HighlightCardService.html
+++ b/injectables/HighlightCardService.html
@@ -134,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:34</a></div>
                             </td>
                         </tr>
 
@@ -223,8 +223,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="106"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:106</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="108"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:108</a></div>
                 </td>
             </tr>
 
@@ -262,7 +262,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;RequiresUpdateMeta&gt;</code>
+                        <b>Returns : </b>        <code><a href="../interfaces/RequiresUpdateMeta.html" target="_self" >Promise&lt;RequiresUpdateMeta&gt;</a></code>
 
                     </div>
                     <div class="io-description">
@@ -294,8 +294,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="75"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:75</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="77"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:77</a></div>
                 </td>
             </tr>
 
@@ -377,8 +377,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="136"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:136</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="138"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:138</a></div>
                 </td>
             </tr>
 
@@ -449,8 +449,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="40"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:40</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="42"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:42</a></div>
                 </td>
             </tr>
 
@@ -524,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:34</a></div>
                         </td>
                     </tr>
 
@@ -550,7 +550,9 @@ import userProfileRepos from &quot;../templates/shared/user-repos&quot;;
 import tailwindConfig from &quot;../templates/tailwind.config&quot;;
 import { firstValueFrom } from &quot;rxjs&quot;;
 import highlightCardTemplate from &quot;../templates/highlight-card.template&quot;;
-import RequiresUpdateMeta from &quot;../../../typings/RequiresUpdateMeta&quot;;
+import { DbUserHighlight } from &quot;../../github/entities/db-user-highlight.entity&quot;;
+import { DbReaction } from &quot;../../github/entities/db-reaction.entity&quot;;
+import { RequiresUpdateMeta } from &quot;../user-card/user-card.service&quot;;
 
 interface HighlightCardData {
   title: string,
@@ -577,7 +579,7 @@ export class HighlightCardService {
   ) {}
 
   private async getHighlightData (highlightId: number): Promise&lt;HighlightCardData&gt; {
-    const highlightReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;));
+    const highlightReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbUserHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;));
     const { login, title, highlight: body, updated_at, url } &#x3D; highlightReq.data;
 
     const reactionsReq &#x3D; await firstValueFrom(this.httpService.get&lt;DbReaction[]&gt;(&#x60;https://api.opensauced.pizza/v1/highlights/${highlightId}/reactions&#x60;));
