--- a/interfaces/RequiresUpdateMeta.html
+++ b/interfaces/RequiresUpdateMeta.html
@@ -47,7 +47,7 @@
   <li>Interfaces</li>
   <li
   >
-  UserCardData</li>
+  RequiresUpdateMeta</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -84,45 +84,27 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#avatarUrl" 
+                                        <a href="#fileUrl" 
 >
-                                            avatarUrl
+                                            fileUrl
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#formattedName" 
+                                        <a href="#hasFile" 
 >
-                                            formattedName
+                                            hasFile
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#id" 
+                                        <a href="#lastModified" 
 >
-                                            id
+                                            lastModified
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#langs" 
+                                        <a href="#needsUpdate" 
 >
-                                            langs
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#langTotal" 
->
-                                            langTotal
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#name" 
->
-                                            name
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#repos" 
->
-                                            repos
+                                            needsUpdate
                                         </a>
                                 </li>
                             </ul>
@@ -140,9 +122,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="avatarUrl"></a>
-                                        <span class="name "><b>avatarUrl</b>
-                                            <a href="#avatarUrl">
+                                        <a name="fileUrl"></a>
+                                        <span class="name "><b>fileUrl</b>
+                                            <a href="#fileUrl">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -150,7 +132,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>avatarUrl:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>fileUrl:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -173,9 +155,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="formattedName"></a>
-                                        <span class="name "><b>formattedName</b>
-                                            <a href="#formattedName">
+                                        <a name="hasFile"></a>
+                                        <span class="name "><b>hasFile</b>
+                                            <a href="#hasFile">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -183,7 +165,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>formattedName:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>hasFile:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -191,7 +173,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
@@ -206,9 +188,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="id"></a>
-                                        <span class="name "><b>id</b>
-                                            <a href="#id">
+                                        <a name="lastModified"></a>
+                                        <span class="name "><b>lastModified</b>
+                                            <a href="#lastModified">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -216,34 +198,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>id:     <code></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="langs"></a>
-                                        <span class="name "><b>langs</b>
-                                            <a href="#langs">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>langs:     <code>()[]</code>
+                                        <code>lastModified:     <code>Date | null</code>
 </code>
                                     </td>
                                 </tr>
@@ -251,7 +206,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>()[]</code>
+                                            <i>Type : </i>    <code>Date | null</code>
 
                                         </td>
                                     </tr>
@@ -266,9 +221,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="langTotal"></a>
-                                        <span class="name "><b>langTotal</b>
-                                            <a href="#langTotal">
+                                        <a name="needsUpdate"></a>
+                                        <span class="name "><b>needsUpdate</b>
+                                            <a href="#needsUpdate">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -276,7 +231,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>langTotal:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+                                        <code>needsUpdate:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -284,67 +239,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="name"></a>
-                                        <span class="name "><b>name</b>
-                                            <a href="#name">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>name:     <code></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="repos"></a>
-                                        <span class="name "><b>repos</b>
-                                            <a href="#repos">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>repos:     <code>Repository[]</code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>    <code>Repository[]</code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
@@ -563,7 +458,7 @@ export class UserCardService {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'UserCardData.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'RequiresUpdateMeta.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
